tests/NormalTests/paczka2/big_fuzzy/83700373.err
Error in line 11: T57iTHSj S294 29,9
Error in line 12: zu8pVzJLI8I S294 65,2
Error in line 22: fygMGI A222 35,4
Error in line 26: Bayz3Ig S294 18,7
Error in line 25: zu8pVzJLI8I A222 12,9
Error in line 33: 8Qu1JUpL S826 29,8
Error in line 44: fygMGI S826 92,5
Error in line 38: zu8pVzJLI8I S847 8,5
Error in line 56: 8Qu1JUpL S294 63,1
Error in line 48: T57iTHSj S294 98,8
Error in line 60: 8Qu1JUpL S826 74,7
Error in line 65: zu8pVzJLI8I S847 64,4
Error in line 80: zu8pVzJLI8I S294 77,5
Error in line 86: zu8pVzJLI8I A222 81,5
Error in line 87: zu8pVzJLI8I S294 77,4
Error in line 93: 8Qu1JUpL S294 71,4
Error in line 102: T57iTHSj S847 48,8
Error in line 125: dzkOJctFj S826 85,59
Error in line 126: dzkOJctFj S826 143,5
Error in line 144: fygMGI S826 52,6
Error in line 148: 8Qu1JUpL S847 46,0
Error in line 158: S847 A222 98,5
Error in line 150: 8Qu1JUpL S826 4,0
Error in line 162: 8Qu1JUpL S294 55,53
Error in line 160: 8Qu1JUpL S847 70,8
Error in line 159: S847 S294 36,0
Error in line 173: Bayz3Ig S847 6,2
Error in line 182: zu8pVzJLI8I S826 133,2
Error in line 189: dzkOJctFj S847 6{,1
Error in line 185: 8Qu1JUpL S826 70,2
Error in line 198: S847 A222 84,19
Error in line 194: 8Qu1JUpL A222 23,6
Error in line 178: S847 S826 95,3
Error in line 209: zu8pVzJLI8I S294 47,1
Error in line 208: S847 S294 54,3
Error in line 195: dzkOJctFj S847 237,3
Error in line 217: 8Qu1JUpL S294 142,8
Error in line 230: zu8pVzJLI8I S294 84,5
Error in line 231: 8Qu1JUpL S847 26,2
Error in line 222: Bayz3Ig A222 22,1
Error in line 241: S847 A222 33,9
